codepkg/objects/Warehouse_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Zero_Fulfilled_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Zero Fulfilled Qty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Addresses__c</fullName>
        <label>CC Addresses</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_For_Warehouse_Validations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true then execute logic to check remaining inventory.</description>
        <label>Check for Warehouse Validations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Shipment_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Shipment Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_Status__c</fullName>
        <description>Shipment order status</description>
        <label>Creation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Post_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Post Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Addresses__c</fullName>
        <label>To Addresses</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Warehouse Config</label>
    <listViews>
        <fullName>All_Warehouses</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Send_Email__c</columns>
        <columns>isActive__c</columns>
        <columns>Create_Shipment_Order__c</columns>
        <columns>To_Addresses__c</columns>
        <columns>CC_Addresses__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Enable_Post_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Warehouses</label>
    </listViews>
    <pluralLabel>Warehouse Configs</pluralLabel>
</CustomObject>